# renderscript-gradle-64

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/renderscriptgradle64/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: example.cc
app/src/main/java/com/example/renderscriptgradle64/: MainActivity.kt
app/src/main/rs/: example.rs
app/src/test/java/com/example/renderscriptgradle64/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
